[package]
name = "onero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.3"
rand = "0.8.5"
ring = "0.17.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
hex = "0.4"
chrono = "0.4"
